Send the tags into the view

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 	download and you'll see a list of available packages.
 </p>
 
-<% if @tags.nil? %>
+<% if @tags.empty? %>
 <div class="alert alert-block alert-error">
 	<p>
 		No downloads are available for any release! This is likely a bug and
