--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,13 @@
 <p>
-	This is the Vagrant download site. Below you will find a list of the
-	available versions to download, sorted in descending order so that the
-	latest release is always at the top. Click on the version you'd like to
-	download and you'll see a list of available packages.
+	This is the former Vagrant download site. It has now been deprecated. 
+	Below you will find a list of the previously available versions to download, 
+	sorted in descending order so that the latest release is always at the top. 
+	Click on the version you'd like to download and you'll see a list of available packages.
+</p>
+
+<p>
+	<strong>New versions of Vagrant and eventually former releases will be found at 
+	the new downloads page</strong> <a href="http://www.vagrantup.com/downloads">here</a>
 </p>
 
 <% if @tags.empty? %>
