Add a deprecation notice to the index.
This site is currently misleading because it claims to hold the latest
version, but actually doesn't since the download site was moved.

See https://github.com/mitchellh/vagrant/issues/4773

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,11 @@
+<div class="alert alert-block alert-warning">
+  <p>
+    This site is deprecated.  See
+    <a href="http://https://www.vagrantup.com/downloads.html">https://www.vagrantup.com/downloads.html</a>
+    for current versions.
+  </p>
+</div>
+
 <p>
 	This is the Vagrant download site. Below you will find a list of the
 	available versions to download, sorted in descending order so that the
